--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-  <meta http-equiv="refresh" content="0; url=https://rodanthi-alexiou.github.io/roaring20s/public/index.html">
+  <meta http-equiv="refresh" content="0; url=https://rodanthi-alexiou.github.io/roaring20s/public">
 </html>
